--- a/src/routes/WelcomePage/WelcomeNavBar.scss
+++ b/src/routes/WelcomePage/WelcomeNavBar.scss
@@ -18,8 +18,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 80px;
-    padding: 0 2rem;
+    padding: 1rem;
     background-color: var(--mainColor);
     color: var(--textColor);
 }
@@ -85,7 +84,6 @@ h2 {
         position: fixed;
         top: 0;
         left: 0;
-        height: 100%;
         width: 100%;
         display: flex;
         flex-direction: column;
