--- a/src/components/ConnectionOption/ConnectionOption.scss
+++ b/src/components/ConnectionOption/ConnectionOption.scss
@@ -14,12 +14,13 @@
     }
   }
 
-  &__back-arrow {
+  &__header-container {
     display: flex;
+    align-items: center;
   }
 
   &__header {
-    margin-top: -1.563rem;
+    margin-left: 13%;
     margin-bottom: 0.5rem;
     font-size: 1.7rem;
   }
