--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,8 +1,14 @@
 @use "../../styles/partials/mixins" as *;
 .navbar {
+  position: fixed;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: auto;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3.5rem;
   background: white;
   color: black;
   text-align: center;
@@ -11,7 +17,6 @@
   font-size: 0.8125rem;
   font-weight: 700;
   line-height: 1rem;
-  padding: 1rem;
   /* 123.077% */
   @include tablet {
     height: 7%;
