--- a/src/routes/HomePage/HomePage.scss
+++ b/src/routes/HomePage/HomePage.scss
@@ -5,10 +5,11 @@
 
 .home {
   background-color: white;
+  height: 100vh;
   background:bottom url(./home-background.jpg) no-repeat;
-  background-repeat: no-repeat;
   background-size: contain;
-  gap: 4.3rem; 
+  padding-top: 15%;
+  gap: 4.3rem;
   @include tablet {
     padding-top: 16%;
     background-image: url(../../assets/images/HomeBackgroundTablet.svg);
@@ -58,15 +59,18 @@
   border-left: 1px solid #000;
   background: #F7F7F7;
   padding: 1rem;
-  width: 85%;
-  align-self: center;
+  width: 22.4375rem;
+  height: 11rem;
+  flex-shrink: 0;
+  margin: auto;
+  margin-bottom: 1.25rem;
 }
 
 .homeSubHeader {
   color: #000;
   font-feature-settings: 'clig' off, 'liga' off;
   font-family: Corben-bold;
-  font-size: 1rem;
+  font-size: 1.3125rem;
   font-style: normal;
   font-weight: 900;
   line-height: 2.5rem;
@@ -74,12 +78,23 @@
 }
 
 .connectionsBtn {
+  margin: auto;
   color: #FFF;
+  text-align: center;
   font-size: 1.25rem;
+  font-style: normal;
   font-weight: 800;
+  line-height: normal;
   background-color: #000;
-  width: 80%;
-  align-self: center;
+  display: flex;
+  height: 2.8125rem;
+  padding: 0.625rem 1.25rem;
+  justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
+  flex-shrink: 0;
+  // width: 80%;
+  // align-self: center;
 }
 
 .homeList {
@@ -136,6 +151,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  // margin-bottom: 10%;
 
   @include tablet {
     justify-content: flex-start;
