--- a/src/routes/WelcomePage/WelcomePage.scss
+++ b/src/routes/WelcomePage/WelcomePage.scss
@@ -39,9 +39,15 @@
     justify-content: center;
     align-items: center;
     margin: 1rem;
+    @include desktop {
+      margin: 0;
+    }
   }
   &__heading-desktop {
     display: none;
+    @include tablet {
+      display: none;
+    }
     @include desktop {
       display: unset;
       font-size: 2.3rem;
